# AgentHub

./: .env.example  .gitignore  README.md  agenthub_tree.txt  compose.yaml  docker-compose.prod.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
docker/: Dockerfile.app  Dockerfile.service
scripts/: create_chroma_db.py
src/: run_agent.py  run_client.py  run_service.py  streamlit_app.py
src/agents/: agents.py  arxiv_agent.py  chatbot.py  llama_guard.py  rag_assistant.py  research_assistant.py  sql_agent.py  tools.py  wikipedia_agent.py
src/client/: client.py
src/core/: llm.py  settings.py
src/memory/: __init__.py  sqlite.py
src/schema/: models.py  schema.py  task_data.py
src/service/: service.py  utils.py
